fix: adjusted the alignment of search and question

--- a/index.css
+++ b/index.css
@@ -78,6 +78,12 @@ body {
   gap: var(--gap);
 }
 
+.search-container {
+  position: relative; 
+  display: flex; 
+  align-items: center;
+}
+
 .search {
   --font-size: calc(var(--fs-base) * 2.5);
   --padding-y: 0;
@@ -86,6 +92,8 @@ body {
   --input-width: 12ch;
   display: flex;
   align-items: stretch;
+  position: absolute; 
+  z-index: 2; 
 }
 
 .search-input {
@@ -146,12 +154,15 @@ body {
 }
 
 .question {
-  font-family: 'Gotham Condensed Book';
-  font-size: clamp(15px, 5vw, 20px);
-  width: clamp(100px, 50vw, 100%);  
+  --font-size: calc(var(--fs-base) * 2.25);
+  --max-width: 24ch;
+  font-family: 'Gotham Condensed Bold';
+  font-size: var(--font-size);
+  max-width: var(--max-width);
   line-height: 1;
   text-align: center;
-  margin: 20 auto;
+  margin-inline: auto;
+  
 }
 
 .subline {
